@@ -248,8 +248,6 @@ merge cgi_env/subprocess_env
 change cgi_header_out and send_cgi_header to use new
 ap_scan_script_header_err_core function 
 
-$r->custom_response can use ap_custom_response (new in 1.3.2-dev)
-
 ---------------------------------------------------------------------------
 OPTIMIZATIONS
 ---------------------------------------------------------------------------
