@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+use 1.3.2-dev+'s ap_custom_response() when possible
+
 remove Apache::DESTROY method (was only for avoiding old AutoLoader bug)
 
 Apache::exit fixed under Apache::PerlRun
